<!--
  ~ BSD 3-Clause License
  ~
  ~ Copyright (c) 2019, Tikal Knowledge, Ltd.
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ • Redistributions of source code must retain the above copyright notice, this
  ~   list of conditions and the following disclaimer.
  ~
  ~ • Redistributions in binary form must reproduce the above copyright notice,
  ~   this list of conditions and the following disclaimer in the documentation
  ~   and/or other materials provided with the distribution.
  ~
  ~ • Neither the name of the copyright holder nor the names of its
  ~   contributors may be used to endorse or promote products derived from
  ~   this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_work_title">

        <SeekBarPreference
            android:defaultValue="@integer/pref_hours_per_day_defaultValue"
            android:icon="@drawable/ic_settings_hours"
            android:key="hours_per_day"
            android:max="23"
            android:title="@string/pref_hours_per_day"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

        <SwitchPreference
            android:defaultValue="@bool/pref_work_day_sunday_defaultValue"
            android:key="work_day.sunday"
            android:title="@string/sunday" />

        <SwitchPreference
            android:defaultValue="@bool/pref_work_day_monday_defaultValue"
            android:key="work_day.monday"
            android:title="@string/monday" />

        <SwitchPreference
            android:defaultValue="@bool/pref_work_day_tuesday_defaultValue"
            android:key="work_day.tuesday"
            android:title="@string/tuesday" />

        <SwitchPreference
            android:defaultValue="@bool/pref_work_day_wednesday_defaultValue"
            android:key="work_day.wednesday"
            android:title="@string/wednesday" />

        <SwitchPreference
            android:defaultValue="@bool/pref_work_day_thursday_defaultValue"
            android:key="work_day.thursday"
            android:title="@string/thursday" />

        <SwitchPreference
            android:defaultValue="@bool/pref_work_day_friday_defaultValue"
            android:key="work_day.friday"
            android:title="@string/friday" />

        <SwitchPreference
            android:defaultValue="@bool/pref_work_day_saturday_defaultValue"
            android:key="work_day.saturday"
            android:title="@string/saturday" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_privacy_security_title">

        <Preference
            android:icon="@drawable/ic_settings_logout"
            android:key="clear_user"
            android:title="@string/pref_logout_title" />
        <Preference
            android:icon="@drawable/ic_settings_delete"
            android:key="clear_data"
            android:title="@string/pref_clear_user_data" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_about_title">

        <Preference
            android:icon="@drawable/ic_info_outline"
            android:key="about.version"
            android:title="@string/pref_version_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/support_url" />
        </Preference>
        <Preference
            android:icon="@drawable/ic_settings_issue"
            android:key="about.issue"
            android:summary="@string/pref_issue_summary"
            android:title="@string/pref_issue_title">
            <intent
                android:action="android.intent.action.SENDTO"
                android:data="@string/pref_issue_url" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>