<!--
  ~ BSD 3-Clause License
  ~
  ~ Copyright (c) 2019, Tikal Knowledge, Ltd.
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ • Redistributions of source code must retain the above copyright notice, this
  ~   list of conditions and the following disclaimer.
  ~
  ~ • Redistributions in binary form must reproduce the above copyright notice,
  ~   this list of conditions and the following disclaimer in the documentation
  ~   and/or other materials provided with the distribution.
  ~
  ~ • Neither the name of the copyright holder nor the names of its
  ~   contributors may be used to endorse or promote products derived from
  ~   this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/timeListFragment"
        android:icon="@drawable/ic_menu_time"
        android:orderInCategory="100"
        android:title="@string/menu_time"
        app:showAsAction="always" />
    <item
        android:id="@+id/reportFormFragment"
        android:icon="@drawable/ic_menu_reports"
        android:orderInCategory="200"
        android:title="@string/menu_reports"
        app:showAsAction="ifRoom" />

    <group android:id="@+id/menu_group_data">
        <item
            android:id="@+id/projectsFragment"
            android:icon="@drawable/ic_menu_projects"
            android:orderInCategory="800"
            android:title="@string/menu_projects"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/tasksFragment"
            android:icon="@drawable/ic_menu_tasks"
            android:orderInCategory="801"
            android:title="@string/menu_tasks"
            app:showAsAction="ifRoom" />
    </group>

    <group android:id="@+id/menu_group_user">
        <item
            android:id="@+id/usersFragment"
            android:icon="@drawable/ic_menu_users"
            android:orderInCategory="900"
            android:title="@string/menu_users"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_menu_profile"
            android:orderInCategory="910"
            android:title="@string/menu_profile"
            app:showAsAction="ifRoom" />
    </group>

    <group android:id="@+id/menu_group_other">
        <item
            android:id="@+id/helpFragment"
            android:icon="@drawable/ic_menu_help"
            android:orderInCategory="990"
            android:title="@string/menu_help"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/timeSettingsFragment"
            android:icon="@drawable/ic_menu_settings"
            android:orderInCategory="999"
            android:title="@string/menu_settings"
            app:showAsAction="never" />
    </group>
</menu>