<!--
  ~ BSD 3-Clause License
  ~
  ~ Copyright (c) 2019, Tikal Knowledge, Ltd.
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ • Redistributions of source code must retain the above copyright notice, this
  ~   list of conditions and the following disclaimer.
  ~
  ~ • Redistributions in binary form must reproduce the above copyright notice,
  ~   this list of conditions and the following disclaimer in the documentation
  ~   and/or other materials provided with the distribution.
  ~
  ~ • Neither the name of the copyright holder nor the names of its
  ~   contributors may be used to endorse or promote products derived from
  ~   this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dialog_form_paddingStart"
    android:paddingTop="@dimen/dialog_form_paddingTop"
    android:paddingEnd="@dimen/dialog_form_paddingEnd"
    android:paddingBottom="@dimen/dialog_form_paddingBottom">

    <ImageView
        android:id="@+id/projectIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/project_label"
        app:layout_constraintBottom_toBottomOf="@+id/projectInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/projectInput"
        app:srcCompat="@drawable/ic_business" />

    <Spinner
        android:id="@+id/projectInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:prompt="@string/project_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/projectIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@android:layout/simple_list_item_1" />

    <ImageView
        android:id="@+id/taskIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/task_label"
        app:layout_constraintBottom_toBottomOf="@+id/taskInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/taskInput"
        app:srcCompat="@drawable/ic_folder" />

    <Spinner
        android:id="@+id/taskInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/time_list_marginTop"
        android:prompt="@string/task_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taskIcon"
        app:layout_constraintTop_toBottomOf="@+id/projectInput"
        tools:listitem="@android:layout/simple_list_item_1" />

    <ImageView
        android:id="@+id/periodIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/period_label"
        app:layout_constraintBottom_toBottomOf="@+id/periodInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/periodInput"
        app:srcCompat="@drawable/ic_history" />

    <Spinner
        android:id="@+id/periodInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/time_list_marginTop"
        android:prompt="@string/period_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/periodIcon"
        app:layout_constraintTop_toBottomOf="@+id/taskInput"
        tools:listitem="@android:layout/simple_list_item_1" />

    <ImageView
        android:id="@+id/startIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start_label"
        app:layout_constraintBottom_toBottomOf="@+id/startInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startInput"
        app:srcCompat="@drawable/ic_timer" />

    <Button
        android:id="@+id/startInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/time_list_marginTop"
        android:hint="@string/start_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startIcon"
        app:layout_constraintTop_toBottomOf="@+id/periodInput" />

    <ImageView
        android:id="@+id/finishIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/finish_label"
        app:layout_constraintBottom_toBottomOf="@+id/finishInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/finishInput"
        app:srcCompat="@drawable/ic_timer_off" />

    <Button
        android:id="@+id/finishInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/time_list_marginTop"
        android:hint="@string/finish_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/finishIcon"
        app:layout_constraintTop_toBottomOf="@+id/startInput" />

    <CheckBox
        android:id="@+id/showProjectField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/time_list_marginTop"
        android:checked="true"
        android:text="@string/project_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishInput" />

    <CheckBox
        android:id="@+id/showTaskField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/task_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_v50"
        app:layout_constraintTop_toTopOf="@+id/showProjectField" />

    <CheckBox
        android:id="@+id/showStartField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/time_list_marginTop"
        android:checked="true"
        android:text="@string/start_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showProjectField" />

    <CheckBox
        android:id="@+id/showFinishField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/finish_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_v50"
        app:layout_constraintTop_toTopOf="@+id/showStartField" />

    <CheckBox
        android:id="@+id/showDurationField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/time_list_marginTop"
        android:checked="true"
        android:text="@string/duration_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showStartField" />

    <CheckBox
        android:id="@+id/showNotesField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/note_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_v50"
        app:layout_constraintTop_toTopOf="@+id/showDurationField" />

    <TextView
        android:id="@+id/errorLabel"
        style="@style/Widget.TextView.Error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/time_list_marginTop"
        app:layout_constraintTop_toBottomOf="@+id/showDurationField"
        tools:text="@tools:sample/lorem" />

    <Button
        android:id="@+id/actionGenerate"
        style="@style/Widget.Button.Start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_generate"
        android:theme="@style/Widget.Button.Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorLabel">

        <requestFocus />
    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>